# PhotoGraph

./: .gitignore  ActionMessage.hpp  ActionQueue.hpp  CMakeLists.txt  ComputationButton.cpp  ComputationButton.hpp  ConfigDialog.cpp  ConfigDialog.hpp  ConfigPages.cpp  ConfigPages.hpp  ConnectionWrapper.hpp  ContainerHelp.hpp  Conversions.hpp  DefaultImageNode.hpp  DefaultProxy.hpp  ImageConnection.hpp  ImageGraphView.cpp  ImageGraphView.hpp  ImagePort.hpp  JsonWidgets.hpp  LabelValueGrid.hpp  MagicTricks.hpp  MainWindow.cpp  MainWindow.hpp  NodeWrapper.hpp  ParameterManager.hpp  PtrHelp.hpp  QSetting.hpp  README.md  ResizeMethod.hpp  SceneSinkNode.hpp  TestImageGraph.cpp  TestImageGraph.hpp  TimeIntervals.cpp  TimeIntervals.hpp  ToOneNode.hpp  TypeComboBox.hpp  TypeDefs.hpp  TypedLineEdit.hpp  Typing.hpp  (+2 more)
nodes/: ImageArithmeticNodes.hpp  ImageClampNode.cpp  ImageClampNode.hpp  ImageConvertNode.cpp  ImageConvertNode.hpp  ImageGammaNode.cpp  ImageGammaNode.hpp  ImageGaussianNode.cpp  ImageGaussianNode.hpp  ImageInputNode.cpp  ImageInputNode.hpp  ImageLinearNode.cpp  ImageLinearNode.hpp  ImageOutputNode.cpp  ImageOutputNode.hpp  ImageResizeNode.cpp  ImageResizeNode.hpp
nodes/creators/: Addition.cpp  Addition.hpp  Clamp.cpp  Clamp.hpp  Convert.cpp  Convert.hpp  Division.cpp  Division.hpp  Gamma.cpp  Gamma.hpp  GaussianBlur.cpp  GaussianBlur.hpp  Linear.cpp  Linear.hpp  Multiplication.cpp  Multiplication.hpp  Resize.cpp  Resize.hpp  Subtraction.cpp  Subtraction.hpp  TwoDitherInfo.hpp
